--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets/style/main.css" />
+    <!-- Import Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light navbar-tp">
