--- a/index.html
+++ b/index.html
@@ -66,6 +66,33 @@
       </div>
     </nav>
 
+    <section class="sales">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-12">
+            <img
+              src="assets/images/banner.png"
+              height="505"
+              alt="Telepatia service"
+            />
+          </div>
+          <div class="col-lg-6 col-12 copywriting">
+            <h1 class="header">
+              Always Connected. <br />
+              No Lagging.
+            </h1>
+            <p class="description">
+              There are many variations of passages of lorem ipsum. There are many variations of passages of lorem ipsum. There are many variations of passages of lorem ipsum.
+            </p>
+            <p class="button">
+              <a href="#" class="btn btn-primary me-2"> See Pricing </a>
+              <a href="#" class="btn btn-secondary"> Testimonial </a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
