extend button with sass

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               No Lagging.
             </h1>
             <p class="description">
-              There are many variations of passages of lorem ipsum. There are many variations of passages of lorem ipsum. There are many variations of passages of lorem ipsum.
+              There are many variations of passages of lorem ipsum. There are many <br/>variations of passages of lorem ipsum. There are many variations<br/> of passages of lorem ipsum.
             </p>
             <p class="button">
               <a href="#" class="btn btn-primary me-2"> See Pricing </a>
