create brand logos

--- a/index.html
+++ b/index.html
@@ -82,12 +82,24 @@
               No Lagging.
             </h1>
             <p class="description">
-              There are many variations of passages of lorem ipsum. There are many <br/>variations of passages of lorem ipsum. There are many variations<br/> of passages of lorem ipsum.
+              There are many variations of passages of lorem ipsum. There are
+              many <br />variations of passages of lorem ipsum. There are many
+              variations<br />
+              of passages of lorem ipsum.
             </p>
             <p class="button">
               <a href="#" class="btn btn-primary me-2"> See Pricing </a>
               <a href="#" class="btn btn-secondary"> Testimonial </a>
             </p>
+          </div>
+        </div>
+        <div class="row brand">
+          <div class="col-lg-12 col-12">
+            <img
+              class="brand-logos"
+              src="./assets/images/brands.png"
+              alt="Brand Telepatia"
+            />
           </div>
         </div>
       </div>
