--- a/index.html
+++ b/index.html
@@ -105,6 +105,21 @@
       </div>
     </section>
 
+    <section class="pricing">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 col-12 text-center">
+            <h1 class="header">
+              Easy Budget
+            </h1>
+            <p class="description">
+              There are many variations of passages of lorem ipsum. <br/>Variations of passages of lorem ipsum.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
