--- a/index.html
+++ b/index.html
@@ -109,12 +109,33 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-12 text-center">
-            <h1 class="header">
-              Easy Budget
-            </h1>
+            <h1 class="header">Easy Budget</h1>
             <p class="description">
-              There are many variations of passages of lorem ipsum. <br/>Variations of passages of lorem ipsum.
+              There are many variations of passages of lorem ipsum.
+              <br />Variations of passages of lorem ipsum.
             </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-12">
+            <div class="master-card basic-card">
+              <h5>Basic</h5>
+              <h1>$50,000</h1>
+              <p>Disarankan untuk yang mulai baru bisnis</p>
+              <div class="item-benefit">
+                <img src="./assets/images/check1.svg" alt="check1" />
+                <p>Live Support</p>
+              </div>
+              <div class="item-benefit">
+                <img src="./assets/images/check1.svg" alt="check1" />
+                <p>10GB Storage</p>
+              </div>
+              <div class="item-benefit">
+                <img src="./assets/images/check1.svg" alt="check1" />
+                <p>Basic Themes</p>
+              </div>
+              <a href="#" class="btn btn-primary me-2"> Start with This </a>
+            </div>
           </div>
         </div>
       </div>
