Item Benefit Basic Card

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
         <div class="row">
           <div class="col-lg-4 col-12">
             <div class="master-card basic-card">
-              <h5>Basic</h5>
-              <h1>$50,000</h1>
-              <p>Disarankan untuk yang mulai baru bisnis</p>
+              <h5 class="name">Basic</h5>
+              <h1 class="price">$50,000</h1>
+              <p class="support">Disarankan untuk yang<br/> mulai baru bisnis</p>
               <div class="item-benefit">
                 <img src="./assets/images/check1.svg" alt="check1" />
                 <p>Live Support</p>
