update card and footer

--- a/index.html
+++ b/index.html
@@ -116,30 +116,74 @@
             </p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-4 col-12">
-            <div class="master-card basic-card">
-              <h5 class="name">Basic</h5>
-              <h1 class="price">$50,000</h1>
-              <p class="support">Disarankan untuk yang<br/> mulai baru bisnis</p>
-              <div class="item-benefit">
-                <img src="./assets/images/check1.svg" alt="check1" />
-                <p>Live Support</p>
+        <div class="row justify-content-center">
+          <div class="col-lg-6 col-12">
+            <div class="row">
+              <div class="col-lg-6 col-12">
+                <div class="master-card basic-card">
+                  <h5 class="name">Basic</h5>
+                  <h1 class="price">$50,000</h1>
+                  <p class="support">
+                    Disarankan untuk yang<br />
+                    mulai baru bisnis
+                  </p>
+                  <div class="item-benefit">
+                    <img src="./assets/images/check1.svg" alt="check1" />
+                    <p>Live Support</p>
+                  </div>
+                  <div class="item-benefit">
+                    <img src="./assets/images/check1.svg" alt="check1" />
+                    <p>10GB Storage</p>
+                  </div>
+                  <div class="item-benefit">
+                    <img src="./assets/images/check1.svg" alt="check1" />
+                    <p>Basic Themes</p>
+                  </div>
+                  <a href="#" class="btn btn-primary me-2"> Start with This </a>
+                </div>
               </div>
-              <div class="item-benefit">
-                <img src="./assets/images/check1.svg" alt="check1" />
-                <p>10GB Storage</p>
+
+              <div class="col-lg-6 col-12">
+                <div class="master-card most-card">
+                  <h5 class="name">Most Popular</h5>
+                  <h1 class="price">$288,000</h1>
+                  <p class="support">
+                    Cocok sekali untuk anda yang <br />sedang membangun bisnis
+                  </p>
+                  <div class="item-benefit">
+                    <img src="./assets/images/check1.svg" alt="check1" />
+                    <p>Live Support</p>
+                  </div>
+                  <div class="item-benefit">
+                    <img src="./assets/images/check1.svg" alt="check1" />
+                    <p>Unlimited Storage</p>
+                  </div>
+                  <div class="item-benefit">
+                    <img src="./assets/images/check1.svg" alt="check1" />
+                    <p>Unlock 1K Themes</p>
+                  </div>
+                  <div class="item-benefit">
+                    <img src="./assets/images/check1.svg" alt="check1" />
+                    <p>Server Optimized</p>
+                  </div>
+                  <div class="item-benefit">
+                    <img src="./assets/images/check1.svg" alt="check1" />
+                    <p>All Basic Features</p>
+                  </div>
+                  <a href="#" class="btn btn-third me-2">
+                    Choose This Plan
+                  </a>
+                </div>
               </div>
-              <div class="item-benefit">
-                <img src="./assets/images/check1.svg" alt="check1" />
-                <p>Basic Themes</p>
-              </div>
-              <a href="#" class="btn btn-primary me-2"> Start with This </a>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <footer>
+      <p>© 2022 All rights reserved | <a href="https://github.com/pardana" target="_blank">A. Pardana</a></p>
+    </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
